--- a/Marvel App/Components/SortButton.xib
+++ b/Marvel App/Components/SortButton.xib
@@ -24,7 +24,7 @@
                         <constraint firstAttribute="width" constant="44" id="p2l-PK-q1Y"/>
                     </constraints>
                     <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" image="list.bullet" catalog="system"/>
+                    <buttonConfiguration key="configuration" style="plain" image="magnifyingglass" catalog="system"/>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
@@ -38,6 +38,6 @@
         </view>
     </objects>
     <resources>
-        <image name="list.bullet" catalog="system" width="128" height="88"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
     </resources>
 </document>
