--- a/Marvel App/View/Components/EmptyCollectionViewCell.xib
+++ b/Marvel App/View/Components/EmptyCollectionViewCell.xib
@@ -9,17 +9,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CustomCell" id="gTV-IL-0wX" customClass="EmptyCollectionViewCell" customModule="Marvel_App" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="292" height="191"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CustomCell" id="gTV-IL-0wX" customClass="EmptyCollectionViewCell" customModule="MarvelApp3" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="254" height="147"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="292" height="191"/>
+                <rect key="frame" x="0.0" y="0.0" width="254" height="147"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="agV-VK-ilp">
-                        <rect key="frame" x="8" y="85" width="276" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CfZ-L2-uL3">
+                        <rect key="frame" x="8" y="63" width="238" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.88627450980392153" green="0.88627450980392153" blue="0.88627450980392153" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -27,15 +27,15 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" red="0.25098039215686274" green="0.25098039215686274" blue="0.25098039215686274" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="agV-VK-ilp" secondAttribute="trailing" constant="8" id="gkJ-oe-pKs"/>
-                <constraint firstItem="agV-VK-ilp" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="wFp-J0-AYh"/>
-                <constraint firstItem="agV-VK-ilp" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="zhq-1B-i2J"/>
+                <constraint firstItem="CfZ-L2-uL3" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="Dxx-hC-pdz"/>
+                <constraint firstAttribute="trailing" secondItem="CfZ-L2-uL3" secondAttribute="trailing" constant="8" id="Pv0-6N-bAj"/>
+                <constraint firstItem="CfZ-L2-uL3" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="hm5-Gn-ebJ"/>
             </constraints>
-            <size key="customSize" width="292" height="191"/>
+            <size key="customSize" width="254" height="147"/>
             <connections>
-                <outlet property="label" destination="agV-VK-ilp" id="Ry9-x8-5w0"/>
+                <outlet property="label" destination="CfZ-L2-uL3" id="Fzq-Bm-6NB"/>
             </connections>
-            <point key="canvasLocation" x="307.24637681159425" y="106.13839285714285"/>
+            <point key="canvasLocation" x="279.71014492753625" y="94.084821428571431"/>
         </collectionViewCell>
     </objects>
 </document>
