--- a/Marvel App/View/MainViewController.xib
+++ b/Marvel App/View/MainViewController.xib
@@ -7,9 +7,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModule="MarvelApp3" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModule="Marvel_App" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tabBarController id="TZX-oP-vhP" customClass="MainViewController" customModule="MarvelApp3" customModuleProvider="target">
+        <tabBarController id="TZX-oP-vhP" customClass="MainViewController" customModule="Marvel_App" customModuleProvider="target">
             <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="IJI-Hp-h6t">
                 <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -20,13 +20,13 @@
             <viewControllers>
                 <viewController title="Characters" id="2Q4-bc-Ej6">
                     <view key="view" contentMode="scaleToFill" id="2ly-az-dNR">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="9mH-9w-7UT">
-                                <rect key="frame" x="0.0" y="0.0" width="406" height="51"/>
+                                <rect key="frame" x="0.0" y="44" width="406" height="51"/>
                                 <subviews>
-                                    <searchBar contentMode="redraw" preservesSuperviewLayoutMargins="YES" barStyle="black" text="" translatesAutoresizingMaskIntoConstraints="NO" id="Xgx-KK-xa2" customClass="SearchBar" customModule="MarvelApp3" customModuleProvider="target">
+                                    <searchBar contentMode="redraw" preservesSuperviewLayoutMargins="YES" barStyle="black" text="" translatesAutoresizingMaskIntoConstraints="NO" id="Xgx-KK-xa2" customClass="SearchBar" customModule="Marvel_App" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="51"/>
                                         <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
@@ -37,7 +37,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="oTo-aa-BgD">
                                         <rect key="frame" x="336" y="9.5" width="70" height="32"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z7L-xh-HkL" customClass="button" customModule="MarvelApp3" customModuleProvider="target">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z7L-xh-HkL" customClass="button" customModule="Marvel_App" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.14999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
@@ -48,7 +48,7 @@
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="magnifyingglass" catalog="system"/>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="38X-Ej-Rgw" customClass="button" customModule="MarvelApp3" customModuleProvider="target">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="38X-Ej-Rgw" customClass="button" customModule="Marvel_App" customModuleProvider="target">
                                                 <rect key="frame" x="38" y="0.0" width="32" height="32"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.14999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
@@ -66,8 +66,8 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="9zR-sg-gwh" customClass="CharactersCollectionView" customModule="MarvelApp3" customModuleProvider="target">
-                                <rect key="frame" x="8" y="51" width="398" height="845"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="9zR-sg-gwh" customClass="CharactersCollectionView" customModule="Marvel_App" customModuleProvider="target">
+                                <rect key="frame" x="8" y="95" width="398" height="718"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="pqT-4S-Pdz">
                                     <size key="itemSize" width="128" height="128"/>
@@ -96,8 +96,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="BVy-R3-Mth" customClass="FavoritesCollectionView" customModule="MarvelApp3" customModuleProvider="target">
-                                <rect key="frame" x="8" y="44" width="398" height="769"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="BVy-R3-Mth" customClass="FavoritesCollectionView" customModule="Marvel_App" customModuleProvider="target">
+                                <rect key="frame" x="8" y="0.0" width="398" height="813"/>
                                 <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dae-3Y-Tuy">
                                     <size key="itemSize" width="128" height="128"/>
