--- a/Marvel App/View/Components/CardCollectionViewCell.xib
+++ b/Marvel App/View/Components/CardCollectionViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="90" height="150"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Nil" translatesAutoresizingMaskIntoConstraints="NO" id="iBq-6k-vah">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Nil" translatesAutoresizingMaskIntoConstraints="NO" id="iBq-6k-vah">
                         <rect key="frame" x="8" y="8" width="74" height="106"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5u-bZ-hnQ">
@@ -33,7 +33,7 @@
                         </constraints>
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="plain">
-                            <backgroundConfiguration key="background" image="favorite_regular"/>
+                            <backgroundConfiguration key="background"/>
                         </buttonConfiguration>
                     </button>
                 </subviews>
@@ -62,6 +62,5 @@
     </objects>
     <resources>
         <image name="Nil" width="405" height="400"/>
-        <image name="favorite_regular" width="32" height="32"/>
     </resources>
 </document>
