--- a/Marvel App/View/Components/CardCollectionViewCell.xib
+++ b/Marvel App/View/Components/CardCollectionViewCell.xib
@@ -16,6 +16,12 @@
                 <rect key="frame" x="0.0" y="0.0" width="90" height="150"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y2J-uh-fwl">
+                        <rect key="frame" x="20" y="20" width="50" height="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Nil" translatesAutoresizingMaskIntoConstraints="NO" id="iBq-6k-vah">
                         <rect key="frame" x="8" y="8" width="74" height="106"/>
                     </imageView>
@@ -35,6 +41,9 @@
                         <buttonConfiguration key="configuration" style="plain">
                             <backgroundConfiguration key="background"/>
                         </buttonConfiguration>
+                        <connections>
+                            <action selector="pressButton:" destination="gTV-IL-0wX" eventType="touchUpInside" id="PJl-uO-SV4"/>
+                        </connections>
                     </button>
                 </subviews>
             </view>
@@ -43,9 +52,12 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="iBq-6k-vah" secondAttribute="trailing" constant="8" id="06q-jh-cvC"/>
                 <constraint firstItem="uQD-fV-wds" firstAttribute="leading" secondItem="v5u-bZ-hnQ" secondAttribute="trailing" constant="8" id="1ug-4u-FAS"/>
+                <constraint firstItem="y2J-uh-fwl" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="3Se-Z5-Kj1"/>
                 <constraint firstItem="iBq-6k-vah" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="6iC-Q6-xW7"/>
                 <constraint firstItem="uQD-fV-wds" firstAttribute="top" secondItem="iBq-6k-vah" secondAttribute="bottom" constant="8" id="Hda-Qx-pEj"/>
+                <constraint firstItem="y2J-uh-fwl" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="Mhu-AU-edq"/>
                 <constraint firstAttribute="bottom" secondItem="v5u-bZ-hnQ" secondAttribute="bottom" constant="8" id="N7r-wb-YxK"/>
+                <constraint firstAttribute="trailing" secondItem="y2J-uh-fwl" secondAttribute="trailing" constant="20" id="P3t-36-h2g"/>
                 <constraint firstItem="iBq-6k-vah" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="SjP-pa-ZzW"/>
                 <constraint firstAttribute="bottom" secondItem="uQD-fV-wds" secondAttribute="bottom" constant="8" id="WK3-Ax-ENh"/>
                 <constraint firstItem="v5u-bZ-hnQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="i77-um-Ljb"/>
@@ -54,6 +66,7 @@
             <size key="customSize" width="221" height="173"/>
             <connections>
                 <outlet property="favoriteCharacter" destination="uQD-fV-wds" id="flf-am-NNc"/>
+                <outlet property="id" destination="y2J-uh-fwl" id="teU-VB-rFe"/>
                 <outlet property="imageCharacter" destination="iBq-6k-vah" id="xm3-Rw-MBW"/>
                 <outlet property="nameCharacter" destination="v5u-bZ-hnQ" id="B48-vm-yYw"/>
             </connections>
