--- a/Marvel App/View/DetailsScrollViewController.xib
+++ b/Marvel App/View/DetailsScrollViewController.xib
@@ -23,7 +23,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Nil" translatesAutoresizingMaskIntoConstraints="NO" id="Dqn-IP-r42">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Nil" translatesAutoresizingMaskIntoConstraints="NO" id="Dqn-IP-r42">
                     <rect key="frame" x="0.0" y="44" width="414" height="200"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="200" id="75p-39-Dxj"/>
